text not showing on some devices fix

--- a/styles.scss
+++ b/styles.scss
@@ -33,6 +33,7 @@ body {
   margin: 5px;
   transform: scale(1);
   transform-style: preserve-3d;
+  overflow: visible !important;
   transition: transform 0.5s;
   display: flex;
   justify-content: center;
@@ -65,7 +66,7 @@ body {
 
 h5 {
   text-transform: uppercase;
-  // transform: scaleX(-1);
+  transform: scaleX(-1);
   margin-bottom: 4%;
   color: white;
   overflow: hidden;
